fail_crate/tests/optional_and_into_iter.stderr
error: `optional` cannot be combined with `into_iter` in field `#[new(...)]`.
 --> fail_crate/tests/optional_and_into_iter.rs:5:11
  |
5 |     #[new(optional, into_iter)]
  |           ^^^^^^^^
