fail_crate/tests/optional_and_into_iter.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(optional, into_iter)]
    x: Vec<u32>
}

fn main() {}
